[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ndiff"
license = {text = "Kmap License (https://kmap.org/book/man-legal.html)"}
dynamic = ["version"]
authors = [{name = "The Kmap Project"}]
description = "Kmap scan diff tool"
readme = {file = "README", content-type = "text/plain"}

[project.urls]
Homepage = "https://kmap.org/ndiff/"
Documentation = "https://kmap.org/book/ndiff-man.html"
Repository = "https://github.com/kmap/kmap.git"
Issues = "https://github.com/kmap/kmap/issues"
Changelog = "https://kmap.org/changelog"

[project.scripts]
ndiff = "ndiff:run_main"

[tool.setuptools]
py-modules = ["ndiff"]

[tool.setuptools.dynamic]
version = {attr = "Version.VERSION"}

#[tool.setuptools.packages.find]
#include = ["ndiff"]
